--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_welcome">Welcome</string>
     <string name="section_format">Welcome! This is section: %1$d</string>
-    <string name="title_activity_meal_board">Meal Board</string>
-    <string name="title_activity_routines">Routines</string>
 
     <!-- Navigation Drawer -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -120,4 +118,11 @@
     <string name="search">Search</string>
     <string name="filter">Filter</string>
     <string name="sort">Sort</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
 </resources>
