--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Kitchen Assistant</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_auto_complete">Autocomplete</string>
     <string name="title_activity_welcome">Welcome</string>
     <string name="section_format">Welcome! This is section: %1$d</string>
 
