--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,4 +123,6 @@
     <string name="saturday">Saturday</string>
     <string name="sunday">Sunday</string>
     <string name="timer_icon">Timer icon</string>
+    <string name="delete">Delete</string>
+    <string name="edit">Edit</string>
 </resources>
