--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,28 +1,4 @@
 <resources>
-    <string name="app_name">Kitchen Assistant</string>
-    <string name="auto_complete">Autocomplete</string>
-    <string name="welcome">Welcome</string>
-    <string name="section_format">Welcome! This is section: %1$d</string>
-
-    <!-- Navigation Drawer -->
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">User Image</string>
-    <string name="recipes">Recipes</string>
-    <string name="notebook">Notebook</string>
-    <string name="suggestions">Suggestions</string>
-    <string name="meal_board">Meal Board</string>
-    <string name="routines">Routines</string>
-    <string name="shopping_list">Shopping List</string>
-    <string name="food">Food</string>
-    <string name="logout">Logout</string>
-
-    <string name="recipe_image_description">Recipe image</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="recipe_detail">Recipe Detail</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -112,6 +88,30 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="app_name">Kitchen Assistant</string>
+    <string name="auto_complete">Autocomplete</string>
+    <string name="welcome">Welcome</string>
+    <string name="section_format">Welcome! This is section: %1$d</string>
+
+    <!-- Navigation Drawer -->
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">User Image</string>
+    <string name="recipes">Recipes</string>
+    <string name="notebook">Notebook</string>
+    <string name="suggestions">Suggestions</string>
+    <string name="meal_board">Meal Board</string>
+    <string name="routines">Routines</string>
+    <string name="shopping_list">Shopping List</string>
+    <string name="food">Food</string>
+    <string name="logout">Logout</string>
+
+    <string name="recipe_image_description">Recipe image</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="recipe_detail">Recipe Detail</string>
     <string name="search">Search</string>
     <string name="filter">Filter</string>
     <string name="sort">Sort</string>
@@ -135,8 +135,13 @@
     <string name="add_a_picture">Add a picture</string>
     <string name="allow_write_external">Can\'t read an image from gallery without permission to external storage.</string>
     <string name="recipe_title">Recipe Title</string>
+    <string name="course">Course</string>
+    <string name="cuisine">Cuisine</string>
+    <string name="language">Language</string>
     <string name="recipe_title_required">Recipe title is required.</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="rotate_image">Rotate image</string>
+    <string name="save">Save recipe</string>
 </resources>
