--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="section_format">Welcome! This is section: %1$d</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -88,10 +91,10 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+
     <string name="app_name">Kitchen Assistant</string>
     <string name="auto_complete">Autocomplete</string>
     <string name="welcome">Welcome</string>
-    <string name="section_format">Welcome! This is section: %1$d</string>
 
     <!-- Navigation Drawer -->
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -128,17 +131,17 @@
     <string name="directions">Directions</string>
     <string name="edit">Edit</string>
     <string name="click_to_add_a_picture">Click to add a picture</string>
-    <string name="dialog_photo_select">Select how you want to add the picture.</string>
+    <string name="dialog_photo_select">Select a source for the picture.</string>
     <string name="no_camera_app">No camera application available.</string>
     <string name="add_a_picture">Add a picture</string>
     <string name="allow_write_external">Can\'t read an image from gallery without permission to external storage.</string>
     <string name="recipe_title">Recipe Title</string>
     <string name="course">Course</string>
     <string name="cuisine">Cuisine</string>
-    <string name="language">Language</string>
+    <string name="language">Written in</string>
     <string name="recipe_title_required">Recipe title is required.</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="rotate_image">Rotate image</string>
+    <string name="cook_time_min">Cook time (min.)</string>
+    <string name="prep_time_min">Prep time (min.)</string>
+    <string name="servings">Servings</string>
 </resources>
