feat: Add upload button in recipe edit overall layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,4 +144,5 @@
     <string name="cook_time_min">Cook time (min.)</string>
     <string name="prep_time_min">Prep time (min.)</string>
     <string name="servings">Servings</string>
+    <string name="upload">Upload</string>
 </resources>
