--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,56 @@
     <string name="food">Food</string>
     <string name="logout">Logout</string>
 
+    <!-- Array items -->
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
+    <string name="appetizer">Appetizer</string>
+    <string name="soup">Soup</string>
+    <string name="salad">Salad</string>
+    <string name="fish">Fish</string>
+    <string name="main_course">Main course</string>
+    <string name="cheese">Cheese</string>
+    <string name="nuts">Nuts</string>
+    <string name="fruit">Fruit</string>
+    <string name="beverage">Beverage</string>
+    <string name="chinese">Chinese</string>
+    <string name="french">French</string>
+    <string name="greek">Greek</string>
+    <string name="indian">Indian</string>
+    <string name="indonesian">Indonesian</string>
+    <string name="italian">Italian</string>
+    <string name="japanese">Japanese</string>
+    <string name="lebanese">Lebanese</string>
+    <string name="mexican">Mexican</string>
+    <string name="spanish">Spanish</string>
+    <string name="thai">Thai</string>
+    <string name="turkish">Turkish</string>
+    <string name="arabic">Arabic</string>
+    <string name="azerbaijani">Azerbaijani</string>
+    <string name="bengali">Bengali</string>
+    <string name="cantonese">Cantonese</string>
+    <string name="czech">Czech</string>
+    <string name="dutch">Dutch</string>
+    <string name="english">English</string>
+    <string name="german">German</string>
+    <string name="hindi">Hindi</string>
+    <string name="hungarian">Hungarian</string>
+    <string name="javanese">Javanese</string>
+    <string name="korean">Korean</string>
+    <string name="malay">Malay</string>
+    <string name="mandarin">Mandarin</string>
+    <string name="persian">Persian</string>
+    <string name="polish">Polish</string>
+    <string name="portuguese">Portuguese</string>
+    <string name="punjabi">Punjabi</string>
+    <string name="romanian">Romanian</string>
+    <string name="russian">Russian</string>
+    <string name="swedish">Swedish</string>
+    <string name="urdu">Urdu</string>
+    <string name="ukrainian">Ukrainian</string>
+    <string name="vietnamese">Vietnamese</string>
+
+
     <string name="recipe_image_description">Recipe image</string>
     <string name="recipe_detail">Recipe Detail</string>
     <string name="search">Search</string>
