--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,6 +86,7 @@
     <string name="timer_icon">Timer icon</string>
     <string name="delete">Delete</string>
     <string name="new_recipe">New Recipe</string>
+    <string name="edit_recipe">Edit Recipe</string>
     <string name="overview">Overview</string>
     <string name="ingredients">Ingredients</string>
     <string name="directions">Directions</string>
@@ -112,4 +113,5 @@
     <string name="decrement">-</string>
     <string name="increment">+</string>
     <string name="bullet">Bullet</string>
+    <string name="recipe_bookmarked">Recipe is saved in the notebook.</string>
 </resources>
