--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,7 +94,7 @@
     <string name="dialog_photo_select">Select a source for the picture.</string>
     <string name="no_camera_app">No camera application available.</string>
     <string name="add_a_picture">Add a picture</string>
-    <string name="allow_write_external">Can\'t read an image from gallery without permission to external storage.</string>
+    <string name="allow_write_external">Can\'t read the picture from gallery without permission to external storage.</string>
     <string name="recipe_title">Recipe Title</string>
     <string name="course">Course</string>
     <string name="cuisine">Cuisine</string>
@@ -114,4 +114,6 @@
     <string name="increment">+</string>
     <string name="bullet">Bullet</string>
     <string name="recipe_bookmarked">Recipe is saved in the notebook.</string>
+    <string name="publish_succesful">Recipe is now public.</string>
+    <string name="publishing">Publishing recipe.</string>
 </resources>
