feat: Give option for countable items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,31 +66,34 @@
     <string name="urdu">Urdu</string>
     <string name="ukrainian">Ukrainian</string>
     <string name="vietnamese">Vietnamese</string>
-    <string name="lb">pounds</string>
-    <string name="pounds">lb</string>
-    <string name="oz">ounces</string>
-    <string name="ounces">oz</string>
-    <string name="milligrams">mg</string>
-    <string name="g">grams</string>
-    <string name="grams">g</string>
-    <string name="kg">kilograms</string>
-    <string name="kilograms">kg</string>
-    <string name="tsp">teaspoons</string>
-    <string name="teaspoons">tsp</string>
-    <string name="tbsp">tablespoons</string>
-    <string name="tablespoons">tbsp</string>
-    <string name="c">cups</string>
-    <string name="cups">c</string>
-    <string name="qt">quarts</string>
-    <string name="quarts">qt</string>
-    <string name="ml">milliliters</string>
-    <string name="milliliters">ml</string>
-    <string name="l">liters</string>
-    <string name="liters">l</string>
-    <string name="pt">pints</string>
-    <string name="pints">pt</string>
-    <string name="gal">gallons</string>
-    <string name="gallons">gal</string>
+    <string name="pounds">pounds</string>
+    <string name="pounds_abbr">lb</string>
+    <string name="ounces">ounces</string>
+    <string name="ounces_abbr">oz</string>
+    <string name="milligrams">milligrams</string>
+    <string name="milligrams_abbr">mg</string>
+    <string name="grams">grams</string>
+    <string name="grams_abbr">g</string>
+    <string name="kilograms">kilograms</string>
+    <string name="kilograms_abbr">kg</string>
+    <string name="teaspoons">teaspoons</string>
+    <string name="teaspoons_abbr">tsp</string>
+    <string name="tablespoons">tablespoons</string>
+    <string name="tablespoons_abbr">tbsp</string>
+    <string name="cups">cups</string>
+    <string name="cups_abbr">c</string>
+    <string name="quarts">quarts</string>
+    <string name="quarts_abbr">qt</string>
+    <string name="milliliters">milliliters</string>
+    <string name="milliliters_abbr">ml</string>
+    <string name="liters">liters</string>
+    <string name="liters_abbr">l</string>
+    <string name="pints">pints</string>
+    <string name="pints_abbr">pt</string>
+    <string name="gallons">gallons</string>
+    <string name="gallons_abbr">gal</string>
+    <string name="pieces">pieces</string>
+    <string name="pieces_abbr">pc</string>
 
     <string name="app_name">Kitchen Assistant</string>
     <string name="auto_complete">Autocomplete</string>
@@ -152,4 +155,6 @@
     <string name="add_food_hint"><u>Cannot find the food?</u></string>
     <string name="removed_ingredient">%1$s is removed from ingredients!</string>
     <string name="undo">UNDO</string>
+    <string name="must_positive_integer">Must be a positive integer other than 0.</string>
+    <string name="countable">Countable</string>
 </resources>
