--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="recipes">Recipes</string>
     <string name="notebook">Notebook</string>
     <string name="suggestions">Suggestions</string>
-    <string name="meal_board">Meal Board</string>
+    <string name="meal_board">Add to plans</string>
     <string name="routines">Routines</string>
     <string name="shopping_list">Shopping List</string>
     <string name="food">Food</string>
