fix: Check internet connection before login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -164,4 +164,5 @@
     <string name="increment_servings">Increment servings</string>
     <string name="food_storage">Storage</string>
     <string name="can_not_add_ingredient">Cannot add ingredient. You need to give a title for the recipe.</string>
+    <string name="connect_internet_try_again">Please connect your device to internet and try again.</string>
 </resources>
