feat: Increase/decrease ingredient amounts with button clicks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,7 +113,7 @@
     <string name="delete">Delete</string>
     <string name="new_recipe">New Recipe</string>
     <string name="edit_recipe">Edit Recipe</string>
-    <string name="overall">Overall</string>
+    <string name="overview">Overview</string>
     <string name="ingredients">Ingredients</string>
     <string name="instruction">Instruction</string>
     <string name="instructions">Instructions</string>
