--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">User Image</string>
-    <string name="recipes">Recipes</string>
+    <string name="foods">Recipes</string>
     <string name="bookmarks">Bookmarks</string>
     <string name="storage">Storage</string>
     <string name="suggestions">Suggestions</string>
@@ -154,4 +154,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_to_storage">Add to storage</string>
+    <string name="recipes">Recipes</string>
 </resources>
