--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,4 +156,5 @@
     <string name="added_to_shopping_list">%1$d %2$s %3$s is added to shopping list.</string>
     <string name="added_to_storage">%1$d %2$s %3$s is added to storage.</string>
     <string name="widget_default">Tap here to edit the shopping list.</string>
+    <string name="add">Add</string>
 </resources>
