--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,4 +139,5 @@
     <string name="added_to_storage">%1$d %2$s %3$s is added to storage.</string>
     <string name="widget_default">Tap here to edit the shopping list.</string>
     <string name="add">Add</string>
+    <string name="could_not_sign_in">Could not sign in.</string>
 </resources>
